# llm-stream-classifier

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
